updated resume and experience section

--- a/experience/index.html
+++ b/experience/index.html
@@ -34,35 +34,22 @@
 
 <!-- experience section starts -->
 <section class="experience" id="experience">
-
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
-  <div class="quote">
-      <span>every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
-  </div>
-
-  <div class="timeline">
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Datum AI Labs</h2>
-        </div>
-        <div class="desc">
-            <h3> Junior Web Developer</h3>
-            <p>Mar 2023 - present</p>
-        </div>
+  
+  <div class="experience-container">
+    <div class="experience-card">
+      <div class="experience-header">
+        <h3>Junior Web Developer</h3>
+        <span class="experience-date">Mar 2024 - Present</span>
       </div>
+      <p class="company">Datum AI Labs</p>
+      <p class="experience-description">
+        Developed and maintained Datumart Shop, an e-commerce platform for food ordering. <br>
+        Built and optimized features to enhance user experience, including checkout, order tracking, payments, and user authentication. <br>
+        Worked on Datumart Admin, a merchant management system for order and product management.
+      </p>
     </div>
   </div>
-
-  <div class="morebtn">
-    <a href="/#experience" class="btn">
-        <i class="fas fa-arrow-left"></i>
-        <span>Back to Home</span>
-  </a>
-  </div>
-
-</div>
 </section>
 <!-- experience section ends -->
 
